@@ -1,6 +1,6 @@
 #!/usr/local/bin/ruby
 
-require 'gluon/dispatcher'
+require 'gluon'
 require 'rack'
 require 'test/unit'
 
